--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "configure": "npm install -y",
         "copy_packages": "cp ./package.json ./dist/package.json && cp ./package-lock.json ./dist/package-lock.json",
         "build": "tsc && comander prepare:build && webpack && npm run copy_packages",
-        "start": "ts-node-dev --respawn --transpileOnly src/index.ts",
+        "start": "ts-node-dev src/index.ts",
         "command": "ts-node-dev src/index.ts"
     },
     "dependencies": {
@@ -23,6 +23,7 @@
         "deep-diff": "^1.0.2",
         "dotenv": "^16.4.5",
         "express": "^4.19.1",
+        "module-alias": "^2.2.3",
         "mongoose": "^8.8.1",
         "ts-md5": "^1.3.1",
         "ts-node": "^10.9.1",
@@ -53,5 +54,8 @@
         "scripts": "./build/**/*",
         "outputPath": "dist",
         "name": "sensort-app"
+    },
+    "_moduleAliases": {
+        "SensorT": "./src/framework/exports"
     }
 }
