--- a/exports/database/package.json
+++ b/exports/database/package.json
@@ -1,27 +1,22 @@
 {
-    "name": "sensort",
-    "version": "1.9.1003",
+    "name": "sensort-database",
+    "version": "1.0.4",
     "main": "./dist/index.js",
     "types": "./dist/index.d.ts",
     "type": "commonjs",
     "files": [
         "dist"
-    ],  
+    ],   
     "engines": {
         "node": ">=16.20.1"
     },
     "scripts": {
-        "configure": "npm install -y",
-        "start": "ts-node-dev test.ts"
+        "build": "tsup && npm publish"
     },
     "dependencies": {
         "axios": "^1.6.8",
-        "body-parser": "^1.20.2",
-        "cookie-parser": "^1.4.6",
-        "cron": "^3.5.0",
         "crypto": "^1.0.1",
         "dotenv": "^16.4.5",
-        "express": "^4.19.1",
         "lodash": "^4.17.21",
         "mongoose": "^8.8.1",
         "ts-md5": "^1.3.1",
@@ -31,9 +26,6 @@
     },
     "devDependencies": {
         "@swc/core": "^1.10.11",
-        "@types/body-parser": "^1.19.2",
-        "@types/cookie-parser": "^1.4.3",
-        "@types/express": "^4.17.15",
         "@types/node": "^20.2.5",
         "rollup-plugin-dts": "^6.1.1",
         "tsup": "^8.3.6",
