--- a/exports/routing/package.json
+++ b/exports/routing/package.json
@@ -1,18 +1,17 @@
 {
-    "name": "sensort",
-    "version": "1.9.1003",
+    "name": "sensort-routing",
+    "version": "1.0.3",
     "main": "./dist/index.js",
     "types": "./dist/index.d.ts",
     "type": "commonjs",
     "files": [
         "dist"
-    ],  
+    ],    
     "engines": {
         "node": ">=16.20.1"
     },
     "scripts": {
-        "configure": "npm install -y",
-        "start": "ts-node-dev test.ts"
+        "build": "tsup && npm publish"
     },
     "dependencies": {
         "axios": "^1.6.8",
@@ -23,7 +22,6 @@
         "dotenv": "^16.4.5",
         "express": "^4.19.1",
         "lodash": "^4.17.21",
-        "mongoose": "^8.8.1",
         "ts-md5": "^1.3.1",
         "ts-node": "^10.9.1",
         "ts-node-dev": "^2.0.0",
