--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,15 +2,17 @@
   "npk_target": "dist/",
   "compilerOptions": {
     "outDir": "dist",
-    "module": "Node16",
+    "module": "CommonJS",
     "target": "ES5",
     "lib": ["es6", "dom", "es2016", "es2017"],
     "sourceMap": true,
     "allowJs": true,
     "declaration": true,
-    "moduleResolution": "node16",
-    "allowSyntheticDefaultImports": true
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "removeComments": true,
+    "esModuleInterop": true
   },
-  "include": ["src/index.ts","src","test.ts"],
-  "exclude": ["bin", "dist", ".docker", "node_modules"]
+  "include": ["src/**/*", "src/**/*.json", "exports"],
+  "exclude": ["bin", "dist", ".docker", "node_modules", "tests"]
 }
