--- a/exports/core/package.json
+++ b/exports/core/package.json
@@ -1,12 +1,12 @@
 {
-    "name": "@sensort/session",
-    "version": "1.0.0",
+    "name": "@sensort/core",
+    "version": "1.0.1",
     "main": "./dist/index.js",
     "types": "./dist/index.d.ts",
     "type": "commonjs",
     "files": [
         "dist"
-    ],    
+    ],
     "engines": {
         "node": ">=16.20.1"
     },
@@ -18,9 +18,7 @@
         "cron": "^3.5.0",
         "crypto": "^1.0.1",
         "dotenv": "^16.4.5",
-        "express": "^4.19.1",
         "lodash": "^4.17.21",
-        "mongoose": "^8.8.1",
         "ts-md5": "^1.3.1",
         "ts-node": "^10.9.1",
         "ts-node-dev": "^2.0.0",
@@ -28,7 +26,6 @@
     },
     "devDependencies": {
         "@swc/core": "^1.10.11",
-        "@types/express": "^4.17.15",
         "@types/node": "^20.2.5",
         "rollup-plugin-dts": "^6.1.1",
         "tsup": "^8.3.6",
@@ -42,9 +39,8 @@
         "typescrint",
         "framework"
     ],
-    "author": "phtomic",
+    "author": "sensort",
     "license": "MIT",
-    "description": "",
     "tsd": {
         "directory": "test/types",
         "compilerOptions": {
@@ -57,5 +53,6 @@
             "module": "commonjs",
             "target": "ES2017"
         }
-    }
+    },
+    "description": ""
 }
