--- a/exports/cronjob/package.json
+++ b/exports/cronjob/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@sensort/session",
+    "name": "@sensort/cron",
     "version": "1.0.0",
     "main": "./dist/index.js",
     "types": "./dist/index.d.ts",
@@ -14,13 +14,9 @@
         "build": "tsup && npm publish --access public"
     },
     "dependencies": {
-        "axios": "^1.6.8",
         "cron": "^3.5.0",
-        "crypto": "^1.0.1",
         "dotenv": "^16.4.5",
-        "express": "^4.19.1",
         "lodash": "^4.17.21",
-        "mongoose": "^8.8.1",
         "ts-md5": "^1.3.1",
         "ts-node": "^10.9.1",
         "ts-node-dev": "^2.0.0",
@@ -28,7 +24,6 @@
     },
     "devDependencies": {
         "@swc/core": "^1.10.11",
-        "@types/express": "^4.17.15",
         "@types/node": "^20.2.5",
         "rollup-plugin-dts": "^6.1.1",
         "tsup": "^8.3.6",
