--- a/exports/mongoose/package.json
+++ b/exports/mongoose/package.json
@@ -1,12 +1,12 @@
 {
-    "name": "@sensort/session",
-    "version": "1.0.0",
+    "name": "@sensort/mongoose",
+    "version": "1.0.1",
     "main": "./dist/index.js",
     "types": "./dist/index.d.ts",
     "type": "commonjs",
     "files": [
         "dist"
-    ],    
+    ],   
     "engines": {
         "node": ">=16.20.1"
     },
@@ -15,10 +15,8 @@
     },
     "dependencies": {
         "axios": "^1.6.8",
-        "cron": "^3.5.0",
         "crypto": "^1.0.1",
         "dotenv": "^16.4.5",
-        "express": "^4.19.1",
         "lodash": "^4.17.21",
         "mongoose": "^8.8.1",
         "ts-md5": "^1.3.1",
@@ -28,7 +26,6 @@
     },
     "devDependencies": {
         "@swc/core": "^1.10.11",
-        "@types/express": "^4.17.15",
         "@types/node": "^20.2.5",
         "rollup-plugin-dts": "^6.1.1",
         "tsup": "^8.3.6",
