--- a/exports/router/package.json
+++ b/exports/router/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@sensort/session",
+    "name": "@sensort/router",
     "version": "1.0.0",
     "main": "./dist/index.js",
     "types": "./dist/index.d.ts",
@@ -15,12 +15,13 @@
     },
     "dependencies": {
         "axios": "^1.6.8",
+        "body-parser": "^1.20.2",
+        "cookie-parser": "^1.4.6",
         "cron": "^3.5.0",
         "crypto": "^1.0.1",
         "dotenv": "^16.4.5",
         "express": "^4.19.1",
         "lodash": "^4.17.21",
-        "mongoose": "^8.8.1",
         "ts-md5": "^1.3.1",
         "ts-node": "^10.9.1",
         "ts-node-dev": "^2.0.0",
@@ -28,6 +29,8 @@
     },
     "devDependencies": {
         "@swc/core": "^1.10.11",
+        "@types/body-parser": "^1.19.2",
+        "@types/cookie-parser": "^1.4.3",
         "@types/express": "^4.17.15",
         "@types/node": "^20.2.5",
         "rollup-plugin-dts": "^6.1.1",
