--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-    "name": "sensort",
+    "name": "sensort-cli",
     "version": "1.9.1003",
     "main": "./dist/index.js",
     "types": "./dist/index.d.ts",
     "type": "commonjs",
     "files": [
         "dist"
-    ],  
+    ],
     "engines": {
         "node": ">=16.20.1"
     },
     "scripts": {
         "configure": "npm install -y",
-        "start": "ts-node-dev test.ts"
+        "start": "ts-node-dev"
     },
     "dependencies": {
         "axios": "^1.6.8",
@@ -27,6 +27,7 @@
         "ts-md5": "^1.3.1",
         "ts-node": "^10.9.1",
         "ts-node-dev": "^2.0.0",
+        "ts-transformer-keys": "^0.4.4",
         "uuid-token-generator": "^1.0.0"
     },
     "devDependencies": {
@@ -35,9 +36,9 @@
         "@types/cookie-parser": "^1.4.3",
         "@types/express": "^4.17.15",
         "@types/node": "^20.2.5",
+        "typescript": "^5.0.4",
         "rollup-plugin-dts": "^6.1.1",
-        "tsup": "^8.3.6",
-        "typescript": "^5.0.4"
+        "tsup": "^8.3.6"
     },
     "repository": {
         "type": "git",
